last stable comit: fixed layout issue in chats

--- a/src/04_Pages/05_Chat/Chat.scss
+++ b/src/04_Pages/05_Chat/Chat.scss
@@ -1,13 +1,16 @@
 @import "../../07_Style_Variables/Variables/Fonts_And_Styles.scss";
 
 .chat_container {
-  height: calc(100vh - 155px);
+  height: calc(100vh - 150px);
   position: relative;
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
 }
 h1 {
-  text-align: center;
   font-size: $font_md_5;
+  height: 20vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
