--- a/src/06_Modals/Setting/SettingModal.scss
+++ b/src/06_Modals/Setting/SettingModal.scss
@@ -11,6 +11,7 @@
   overflow: hidden;
   border-radius: 20px;
   width: 94%;
+  z-index: 99;
 
   z-index: 4;
   margin: 0 1rem;
